--- a/.npmrc
+++ b/.npmrc
@@ -4,3 +4,4 @@ tmp=./tmp
 puppeteer_download_host=https://npm.taobao.org/mirrors
 canvas_binary_host_mirror=https://npm.taobao.org/mirrors/canvas-prebuilt
 package-lock=false
+mm.json
