--- a/package.json
+++ b/package.json
@@ -39,10 +39,18 @@
 		}
 	],
 	"license": "MIT",
-	"dependencies": {},
+	"dependencies": {
+		"ffprobe": "^1.1.2",
+		"multiparty": "^4.2.2"
+	},
 	"devDependencies": {
+		"@mmstudio/an000040": "^1.0.0",
+		"@mmstudio/config": "^2.0.1",
+		"@types/ffprobe": "^1.1.0",
+		"@types/multiparty": "^0.0.32",
 		"@typescript-eslint/eslint-plugin": "latest",
 		"@typescript-eslint/parser": "latest",
+		"anylogger": "^1.0.9",
 		"ava": "latest",
 		"del-cli": "latest",
 		"eslint": "latest",
