--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"clean": "del-cli ./dist/",
 		"lint": "eslint ./src/**/*.ts",
 		"compile": "tsc",
-		"build": "npm run clean && npm run lint && npm run compile"
+		"build": "npm run clean && npm run lint && npm run compile",
+		"release": "yarn build && np"
 	},
 	"repository": {
 		"type": "https+git",
@@ -39,6 +40,10 @@
 		}
 	],
 	"license": "MIT",
+	"publishConfig": {
+		"access": "public",
+		"registry": "https://registry.npmjs.org"
+	},
 	"dependencies": {
 		"multiparty": "^4.2.2"
 	},
@@ -54,6 +59,7 @@
 		"eslint": "latest",
 		"eslint-config-prettier": "latest",
 		"eslint-plugin-import": "latest",
+		"np": "latest",
 		"typescript": "next"
 	}
 }
