--- a/package.json
+++ b/package.json
@@ -47,13 +47,16 @@
 	"dependencies": {
 		"multiparty": "^4.2.2"
 	},
+	"peerDependencies": {
+		"@next/env": "*"
+	},
 	"devDependencies": {
 		"@mmstudio/an000040": "^1.0.0",
-		"@mmstudio/config": "^2.0.1",
-		"@types/multiparty": "^0.0.32",
+		"@next/env": "latest",
+		"@types/multiparty": "latest",
 		"@typescript-eslint/eslint-plugin": "latest",
 		"@typescript-eslint/parser": "latest",
-		"anylogger": "^1.0.9",
+		"anylogger": "latest",
 		"ava": "latest",
 		"del-cli": "latest",
 		"eslint": "latest",
